--- a/_includes/nav/home.html
+++ b/_includes/nav/home.html
@@ -5,6 +5,7 @@
         <td><a href="{{site.baseurl}}/navigation/section/snake">Snake</a></td>
         <td><a href="{{site.baseurl}}/navigation/section/csa">CSA</a></td>
         <td><a href="{{site.baseurl}}/snake">Snake</a></td>
+        <td><a href="{{site.baseurl}}/rpg">RPG</a></td>
         <td id="loginArea"><a href="{{site.baseurl}}/login">Login</a></td>
         
     </tr>
