--- a/_includes/nav/game_intro.html
+++ b/_includes/nav/game_intro.html
@@ -7,4 +7,4 @@
         <td><a href="{{site.baseurl}}/game/intro/player">Player</a></td>
         <td><a href="{{site.baseurl}}/game/intro/hacks">Ideation Hack</a></td>
     </tr>
-</table>c
+</table>
